--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,6 @@
     "react-dom": "^16.0.0",
     "react-redux": "^4.4.5",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.14",
     "redux": "^3.7.2",
     "redux-logger": "^2.7.4",
     "styled-components": "^2.1.2",
@@ -22,10 +21,11 @@
     "babel-core": "5.8.22",
     "babel-loader": "5.3.2",
     "nodemon": "^1.12.0",
-    "react-scripts": "^0.9.5"
+    "react-scripts": "1.0.14"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node index.js",    
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
