--- a/client/package.json
+++ b/client/package.json
@@ -21,10 +21,10 @@
     "babel-core": "5.8.22",
     "babel-loader": "5.3.2",
     "nodemon": "^1.12.0",
-    "react-scripts": "1.0.14"
+    "react-scripts": "^1.0.14"
   },
   "scripts": {
-    "start": "node index.js",    
+    "start": "node index.js",
     "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
