--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node ./server/index.js",
+    "heroku-postbuild": "cd client/ && npm install && npm install --only=dev --no-shrinkwrap && npm run build",    
     "dev": "nodemon ./server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
