--- a/client/package.json
+++ b/client/package.json
@@ -24,8 +24,8 @@
     "react-scripts": "^1.0.14"
   },
   "scripts": {
-    "start": "node index.js",
-    "dev": "react-scripts start",
+    "dev": "node index.js",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
