--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,8 @@
 {
+    "parser": "babel-eslint",
     "env": {
         "browser": true,
-        "commonjs": true,
-        "es6": true,
-        "node": true
+        "es6": true
     },
     "parserOptions": {
         "ecmaFeatures": {
@@ -19,5 +18,8 @@
         "no-unused-vars": "warn",
         "constructor-super": "warn",
         "valid-typeof": "warn"
-    }
+    },
+    "extends": [
+        "plugin:react/recommended"
+    ]
 }
