--- a/package.json
+++ b/package.json
@@ -1,46 +1,29 @@
 {
-  "name": "conduit-node",
-  "version": "1.0.0",
-  "private": true,  
-  "description": "",
-  "main": "app.js",
-  "scripts": {
-    "start": "node ./server/index.js",
-    "heroku-postbuild": "cd client/ && npm install && npm install --only=dev --no-shrinkwrap && npm run build",    
-    "dev": "nodemon ./server/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": ""
-  },
-  "license": "ISC",
+  "name": "mk",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "body-parser": "1.15.0",
-    "cors": "2.7.1",
-    "dotenv": "2.0.0",
-    "ejs": "2.4.1",
-    "errorhandler": "1.4.3",
-    "express": "4.15.4",
-    "express-jwt": "3.3.0",
-    "express-session": "1.13.0",
-    "jsonwebtoken": "7.1.9",
-    "method-override": "2.3.5",
-    "methods": "1.1.2",
-    "mongoose": "4.4.10",
-    "mongoose-unique-validator": "1.0.2",
-    "morgan": "1.7.0",
-    "passport": "0.3.2",
-    "passport-local": "1.0.0",
-    "request": "2.69.0",
-    "slug": "0.9.1",
-    "underscore": "1.8.3",
-    "babel-core": "5.8.22",
-    "babel-loader": "5.3.2",
-    "collect.js": "3.0.46"
-
+    "express": "^4.15.4",
+    "material-ui": "^1.0.0-beta.16",
+    "material-ui-icons": "^1.0.0-beta.5",
+    "morgan": "^1.8.2",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-redux": "^4.4.5",
+    "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
+    "redux-logger": "^2.7.4",
+    "styled-components": "^2.1.2",
+    "superagent": "^2.3.0",
+    "superagent-promise": "^1.1.0"
   },
   "devDependencies": {
-    "nodemon": "^1.11.0"
+    "react-scripts": "^1.0.14"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "GENERATE_SOURCEMAP=false react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   }
 }
