--- a/client/package.json
+++ b/client/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "dependencies": {
     "express": "^4.15.4",
-    "material-ui": "^1.0.0-beta.16",
+    "material-ui": "^1.0.0-beta.17",
     "material-ui-icons": "^1.0.0-beta.5",
     "morgan": "^1.8.2",
+    "rc-progress": "^2.2.2",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-redux": "^4.4.5",
