--- a/client/package.json
+++ b/client/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "dependencies": {
     "express": "^4.15.4",
-    "material-ui": "^1.0.0-beta.19",
+    "material-ui": "^1.0.0-beta.20",
     "material-ui-icons": "^1.0.0-beta.17",
+    "material-ui-pickers": "^1.0.0-alpha.12",
     "morgan": "^1.8.2",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
